<resources>
    <string name="app_name">SQLitePrueba</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_car">Add Car</string>
    <string name="introduce_la_marca_del_coche">Introduce la marca del coche</string>
    <string name="marca">Marca</string>
    <string name="precio">Precio</string>
    <string name="introduce_el_color_del_coche">Introduce el color del coche</string>
    <string name="azul">Azul</string>
    <string name="color">Color</string>
    <string name="introduce_el_precio_del_coche">Introduce el precio del coche</string>
    <string name="description">Description…</string>
    <string name="descripcion">Descripción</string>
    <string name="add">Add</string>
    <string name="boton_de_la_papelera_sirve_para_borrar_un_coche">Boton de la papelera, sirve para borrar un coche</string>
    <string name="update">Update Car</string>
</resources>